--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "yeoman-generator": "^0.16.0"
   },
   "devDependencies": {
+    "chai": "^3.3.0",
     "mocha": "*"
   },
   "peerDependencies": {
